Changed launcher container position to fixed in the hopes that opening keyboard on mobile won't shift it up

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,7 +17,7 @@
   }
   
   .launcher-container{
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     left: 50%;
     transform: translateX(-50%);
